a little bit more

--- a/index.html
+++ b/index.html
@@ -27,8 +27,31 @@
 
 <div class="container">
     <div class="main-label"><img src="logo_naukma_bw.png" class="logo_naukma_bw">
-        <button class="about-us-btn">ПРО НАС</button>></div>
-    <div class="top-background"></div>
+        <button class="about-us-btn">ПРО НАС</button>>
+        <img src="down.jpg" class="down-arrow">
+
+    </div>
+    <div class="special-offers-parent">
+        <p>СПЕЦІАЛЬНІ ПРОПОЗИЦІЇ </p>
+        <div class="special-offers">
+            <div class="product-example">
+                <img src="spec-of-new.jpg" class="spec-of-image">
+                <div class="spec-of-description">Худі КМА oversize</div>
+                <div class="spec-of-price">₴790.00</div>
+            </div>
+            <div class="product-example">
+                <img src="spec-of-popular.jpg" class="spec-of-image">
+                <div class="spec-of-description">Куртка КМА</div>
+                <div class="spec-of-price">₴1,500.00</div>
+            </div>
+            <div class="product-example">
+                <img src="spec-of-sale.jpg" class="spec-of-image">
+                <div class="spec-of-description">Світшот МОГИЛЯНКА</div>
+                <div class="spec-of-price" style="text-decoration: line-through;  padding-top:-5px">₴690.00 </div>
+                    <div class="spec-of-price" style="text-align: right;padding-right: 70px; padding-bottom: 10px"> ₴490.00</div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
