--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="panel row">
     <div class="label">
-        <img src="logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
+        <img src="media/logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
         <div class="label-son">
         <div class="name">KMA GIFTSHOP</div>
         <div class="logo">Інтернет магазин могилянського мерчу</div>
@@ -20,32 +20,32 @@
             <button class="menu-button" href="#">Головна</button>
             <button class="menu-button">Магазин</button>
             <button class="menu-button">Контакти</button>
-            <button class="menu-button"><img src="shopping_cart.png" class="cart-btn"></button>
+            <button class="menu-button"><img src="media/shopping_cart.png" class="cart-btn"></button>
         </div>
     </div>
 </div>
 
 <div class="container">
-    <div class="main-label"><img src="logo_naukma_bw.png" class="logo_naukma_bw">
+    <div class="main-label"><img src="media/logo_naukma_bw.png" class="logo_naukma_bw">
         <button class="about-us-btn">ПРО НАС</button>>
-        <img src="down.jpg" class="down-arrow">
+        <img src="media/down.jpg" class="down-arrow">
 
     </div>
     <div class="special-offers-parent">
         <p>СПЕЦІАЛЬНІ ПРОПОЗИЦІЇ </p>
         <div class="special-offers">
             <div class="product-example">
-                <img src="spec-of-new.jpg" class="spec-of-image">
+                <img src="media/spec-of-new.jpg" class="spec-of-image">
                 <div class="spec-of-description">Худі КМА oversize</div>
                 <div class="spec-of-price">₴790.00</div>
             </div>
             <div class="product-example">
-                <img src="spec-of-popular.jpg" class="spec-of-image">
+                <img src="media/spec-of-popular.jpg" class="spec-of-image">
                 <div class="spec-of-description">Куртка КМА</div>
                 <div class="spec-of-price">₴1,500.00</div>
             </div>
             <div class="product-example">
-                <img src="spec-of-sale.jpg" class="spec-of-image">
+                <img src="media/spec-of-sale.jpg" class="spec-of-image">
                 <div class="spec-of-description">Світшот МОГИЛЯНКА</div>
                 <div class="spec-of-price" style="text-decoration: line-through;  padding-top:-5px">₴690.00 </div>
                     <div class="spec-of-price" style="text-align: right;padding-right: 70px; padding-bottom: 10px"> ₴490.00</div>
