--- a/shop_index.html
+++ b/shop_index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="panel row">
     <div class="label">
-        <img src="logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
+        <img src="media/logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
         <div class="label-son">
             <div class="name">KMA GIFTSHOP</div>
             <div class="logo">Інтернет магазин могилянського мерчу</div>
@@ -19,7 +19,7 @@
             <button class="menu-button" href="#">Головна</button>
             <button class="menu-button">Магазин</button>
             <button class="menu-button">Контакти</button>
-            <button class="menu-button"><img src="shopping_cart.png" class="cart-btn"></button>
+            <button class="menu-button"><img src="media/shopping_cart.png" class="cart-btn"></button>
         </div>
     </div>
 </div>
@@ -27,13 +27,13 @@
 <div class="container">
     <div class="side-panel">
         <div class="categories">
-            <div class="category">Жінки <img src="down_black.png" width="20" height="10"></div>
+            <div class="category">Жінки <img src="media/down_black.png" width="20" height="10"></div>
             <div class="sub-category">Світшоти</div>
             <div class="sub-category">Худі</div>
             <div class="sub-category">Футболки</div>
             <div class="sub-category">Поло</div>
             <div class="sub-category">Верхній одяг</div>
-            <div class="category">Чоловіки <img src="down_black.png" width="20" height="10"></div>
+            <div class="category">Чоловіки <img src="media/down_black.png" width="20" height="10"></div>
             <div class="sub-category">Світшоти</div>
             <div class="sub-category">Худі</div>
             <div class="sub-category">Футболки</div>
@@ -50,32 +50,32 @@
 
     <div class="products-list">
         <div class="product">
-            <img src="bomber1.jpg" class="product-image">
+            <img src="media/bomber1.jpg" class="product-image">
             <div class="product-name">Бомбер</div>
             <div class="product-price">₴690.00</div>
         </div>
         <div class="product">
-            <img src="hoodie1.jpg" class="product-image">
+            <img src="media/hoodie1.jpg" class="product-image">
             <div class="product-name">Худі рожеве</div>
             <div class="product-price">₴690.00</div>
         </div>
         <div class="product">
-            <img src="hoodie2.jpg" class="product-image">
+            <img src="media/hoodie2.jpg" class="product-image">
             <div class="product-name">Худі класика</div>
             <div class="product-price">₴590.00</div>
         </div>
         <div class="product">
-            <img src="sweatshot1.jpg" class="product-image">
+            <img src="media/sweatshot1.jpg" class="product-image">
             <div class="product-name">Світшот Петръ Могила</div>
             <div class="product-price">₴790.00</div>
         </div>
         <div class="product">
-            <img src="sweatshot2.jpg" class="product-image">
+            <img src="media/sweatshot2.jpg" class="product-image">
             <div class="product-name">Світшот КМА з вишивкою</div>
             <div class="product-price">₴690.00</div>
         </div>
         <div class="product">
-            <img src="polo1.jpg" class="product-image">
+            <img src="media/polo1.jpg" class="product-image">
             <div class="product-name">Поло КМА Airy</div>
             <div class="product-price">₴550.00</div>
         </div>
