almost verstka done

--- a/shop_index.html
+++ b/shop_index.html
@@ -23,28 +23,29 @@
         </div>
     </div>
 </div>
-
+<div class="shop-header">
+    <div class="category-name">Всі товари</div>
+</div>
 <div class="container">
-    <div class="side-panel">
-        <div class="categories">
-            <div class="category">Жінки <img src="media/down_black.png" width="20" height="10"></div>
-            <div class="sub-category">Світшоти</div>
-            <div class="sub-category">Худі</div>
-            <div class="sub-category">Футболки</div>
-            <div class="sub-category">Поло</div>
-            <div class="sub-category">Верхній одяг</div>
-            <div class="category">Чоловіки <img src="media/down_black.png" width="20" height="10"></div>
-            <div class="sub-category">Світшоти</div>
-            <div class="sub-category">Худі</div>
-            <div class="sub-category">Футболки</div>
-            <div class="sub-category">Поло</div>
-            <div class="sub-category">Верхній одяг</div>
-            <div class="category">Дитячі товари</div>
-            <div class="category">Аксесуари</div>
-        </div>
 
-        <div class="filters">
-            <p>Застосувати фільтри:</p>
+    <div class="side-panel">
+            <div class="side-panel-son">
+            <div class="categories">
+                <div class="category">Жінки <img src="media/down_black.png" width="20" height="10"></div>
+                <div class="sub-category">Світшоти</div>
+                <div class="sub-category">Худі</div>
+                <div class="sub-category">Футболки</div>
+                <div class="sub-category">Поло</div>
+                <div class="sub-category">Верхній одяг</div>
+                <div class="category">Чоловіки <img src="media/down_black.png" width="20" height="10"></div>
+                <div class="sub-category">Світшоти</div>
+                <div class="sub-category">Худі</div>
+                <div class="sub-category">Футболки</div>
+                <div class="sub-category">Поло</div>
+                <div class="sub-category">Верхній одяг</div>
+                <div class="category">Дитячі товари</div>
+                <div class="category">Аксесуари</div>
+            </div>
         </div>
     </div>
 
@@ -80,6 +81,9 @@
             <div class="product-price">₴550.00</div>
         </div>
     </div>
+</div>
+<div class="contacts">
+
 </div>
 
 </body>
