--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="label">
         <img src="media/logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
         <div class="label-son">
-        <div class="name">KMA GIFTSHOP</div>
-        <div class="logo">Інтернет магазин могилянського мерчу</div>
+            <div class="name">KMA GIFTSHOP</div>
+            <div class="logo">Інтернет магазин могилянського мерчу</div>
         </div>
     </div>
     <div class="panel-buttons-parent">
@@ -26,11 +26,14 @@
 </div>
 
 <div class="container">
-    <div class="main-label"><img src="media/logo_naukma_bw.png" class="logo_naukma_bw">
-        <button class="about-us-btn">ПРО НАС</button>>
+    <div class="main-label">
+        <img src="media/logo_naukma_bw.png" class="logo_naukma_bw">
+        <button class="about-us-btn">ПРО НАС</button>
+        >
         <img src="media/down.jpg" class="down-arrow">
 
     </div>
+
     <div class="special-offers-parent">
         <p>СПЕЦІАЛЬНІ ПРОПОЗИЦІЇ </p>
         <div class="special-offers">
@@ -47,15 +50,52 @@
             <div class="product-example">
                 <img src="media/spec-of-sale.jpg" class="spec-of-image">
                 <div class="spec-of-description">Світшот МОГИЛЯНКА</div>
-                <div class="spec-of-price" style="text-decoration: line-through;  padding-top:-5px">₴690.00 </div>
-                    <div class="spec-of-price" style="text-align: right;padding-right: 70px; padding-bottom: 10px"> ₴490.00</div>
+                <div class="spec-of-price" style="text-decoration: line-through;  padding-top:-5px">₴690.00</div>
+                <div class="spec-of-price" style="text-align: right;padding-right: 70px; padding-bottom: 10px">
+                    ₴490.00
+                </div>
             </div>
 
         </div>
     </div>
+
+    <div class="about-us">
+        <p>ПРО НАС</p>
+        <div class="about-us-son">
+            <div class="about-us-top">
+                <div class="left-text">
+                    У 2016 році Президент Академії Андрій Мелешевич запропонував випускникам
+                    Могилянки створити офіційну крамницю з брендованими товарами
+                    Києво-Могилянської Академії. Віктор та Вячеслав Килимарі, Тимур Демчук,
+                    Юрій Бугай, Руслан Добжинський з командою вже перетворили “смітничок” на
+                    другому плацу в ко-воркінг KMArt Yard. Вже за півтора місяці до
+                    400-річчя Могилянки ми відкрили крамницю в третьому корпусі. І від тоді все почалося…
+                </div>
+            </div>
+            <div class="about-us-bottom">
+                <div class="right-text"><h3>ДЛЯ КОМАНДИ</h3>
+                    Це перший досвід підприємництва для студентів. Бо саме вони визначають асортимент,
+                    працюють з постачальниками та клієнтами
+                </div>
+                <div class="right-text"><h3>ДЛЯ ВИКЛАДАЧІВ</h3>
+                    Це простота вибору свого гардеробу для викладачів та команди Могилянки.
+                    Вони не витрачають час у роздумах на те, що одягнути
+                </div>
+                <div class="right-text"><h3>ДЛЯ СТУДЕНТІВ</h3>
+                    Це стильні та модні речі для теперішніх студентів.
+                    Та й можливість показати, що вступив/ла в Могилянку
+                </div>
+                <div class="right-text"><h3>ДЛЯ ВИПУСКНИКІВ</h3>
+                    Це спогади та можливість долучитися до розвитку Могилянки для випускників
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!--    <div class="contacts">
+
+    </div> -->
 </div>
-
-
 
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
